--- a/package.json
+++ b/package.json
@@ -4,12 +4,39 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "grunt",
+    "test:unit": "mocha test/unit/ --recursive",
+    "test:watch": "mocha test/unit/ --recursive --watch"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {},
   "dependencies": {
+    "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
-    "node-fetch": "^2.6.0"
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "fetch-mock": "^8.0.0-alpha.11",
+    "grunt": "^1.0.3",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^21.0.0",
+    "grunt-mocha-test": "^0.13.3",
+    "grunt-prettier": "^1.1.0",
+    "grunt-run": "^0.8.1",
+    "grunt-simple-nyc": "^2.0.0",
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.21.0",
+    "mocha-multi-reporters": "^1.1.7",
+    "node-fetch": "^2.6.0",
+    "nyc": "^14.1.0",
+    "prettier": "^1.18.2",
+    "sinon": "^7.2.2",
+    "sinon-chai": "^3.3.0"
   }
 }
