--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.0",
     "prettier": "^1.18.2",
+    "puppeteer": "^2.0.0",
     "sinon": "^7.2.2",
     "sinon-chai": "^3.3.0"
   }
